# honk-parser

./: .gitignore  README.md  coverage.md  nevermiss.py  parse_coverage.sh  plugins.json  pyproject.toml  release.sh
.github/workflows/: release.yaml  run_and_test.yaml  test_and_build.yaml
src/: stdplugin.py
src/fileparser/: main.py  templates.py
src/honk/: __init__.py  __init__.pyi  main.py  parselib.py  parselib.pyi  templates.py
src/mdparser/: __init__.py  buildlib.py  main.py  parse_utils.py  parselib.py  templatelib.py  templates.py
src/stdplugin/: __init__.py
tests/: conftest.py
tests/fileparser/: test_parselib.py
tests/honk/: mock_plugin.py  test_parse.py  test_parselib.py  test_plugin.py
tests/honk/test_cli/: test_root.py
tests/mdparser/: test_mdparser.py  test_parse_utils.py  test_parselib.py
tests/stdplugin/: test_stdplugin.py
tests/stdplugin/samples/: arr_map.json  arr_map0.md  arr_map1.md  arr_map2.md  map_arr.json  map_arr0.md  map_arr1.md  map_arr2.md  map_map.json  map_map0.md  map_map1.md  map_map2.md  map_map3.md  map_map4.md  map_map5.md  map_map6.md
