[project]
name = "mdparser"
version = "0.1.0"
description = "A tool that parses your data into beautiful markdowns"
readme = "README.md"
authors = [
    { name = "Pependr", email = "antonkudrikov88@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
mdparser = "mdparser:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.13",
]
