[project]
name = "honk"
version = "0.1.0"
description = "A tool that parses your data into whatever you desire"
readme = "README.md"
authors = [
    { name = "Pependr", email = "antonkudrikov88@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.1",
]

[project.scripts]
mdparser = "honk.main:root"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "honk"
source-include = ["tests/**", "README.md"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.13",
]
